syntax = "proto3";

package auth;

service AuthService {
  // Verify if a user exists
  rpc VerifyUser (VerifyUserRequest) returns (VerifyUserResponse) {}
  
  // Validate JWT token
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message VerifyUserRequest {
  string userId = 1;
}

message VerifyUserResponse {
  bool exists = 1;
  optional string email = 2;
  optional string username = 3;
  repeated string roles = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  optional string userId = 2;
  optional string email = 3;
  optional string username = 4;
  repeated string roles = 5;
}
